--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,11 @@
   background-color: #e6e6e6;
 }
 
+.Divider {
+  margin: 2rem 4rem;
+  border: 0.5px solid #e6e6e6;
+}
+
 @media (max-width: 992px) {
   .ResultContainer {
     grid-template-columns: repeat(3, minmax(250px, 1fr));
