--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,19 @@
   background-color: #e6e6e6;
 }
 
+.Loader {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 75px;
+  height: 75px;
+  border: 5px solid #f2f2f2;
+  border-radius: 100%;
+  border-right-color: #a6a6a6;
+  border-top-color: #a6a6a6;
+  animation: spin 1s infinite linear;
+}
+
 .Divider {
   margin: 2rem 4rem;
   border: 0.5px solid #e6e6e6;
@@ -76,5 +89,14 @@
   .SearchInput {
     width: 300px;
     font-size: 14px;
+  }
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
   }
 }
