--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,45 @@
   background-color: #e6e6e6;
 }
 
+.DialogContainer {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.Dialog {
+  width: 500px;
+  height: 500px;
+  box-shadow: 8px 8px 4px #808080;
+  border-radius: 8px;
+  background-color: #fff;
+  padding: 8px;
+}
+
+.DialogTitle {
+  display: "flex";
+  justify-content: space-between;
+}
+
+.DialogContent {
+  margin-top: 20px;
+}
+
+.DialogCloseBtn {
+  color: #fff;
+  width: 40px;
+
+  border: none;
+  border-radius: 4px;
+  background-color: #ff8000;
+}
+
 .Loader {
   position: absolute;
   top: 50%;
