--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,16 @@
 }
 
 .DialogContent {
-  margin-top: 20px;
+  width: 100%;
+  height: 100%;
+  margin-top: 16px;
+}
+
+.DialogContent img {
+  position: relative;
+  width: 20em;
+  height: 20em;
+  object-fit: scale-down;
 }
 
 .DialogCloseBtn {
