--- a/src/style.css
+++ b/src/style.css
@@ -11,9 +11,11 @@
 .SearchInput {
   width: 800px;
   font-size: 24px;
+  border-radius: 8px;
+  border: 1px solid #ff8000;
 }
 
-.SubmitBtn {
+.RandomBtn {
   width: 75px;
   height: 56px;
   background-color: #ff8000;
